--- a/my_shop/.gitignore
+++ b/my_shop/.gitignore
@@ -33,3 +33,16 @@ make.bat
 Makefile
 
 doc-dev
+poetry-convert.py
+
+poetry-convert.py
+
+poetry-convert.py
+
+poetry-convert.py
+
+poetry-convert.py
+
+poetry-convert.py
+
+poetry-convert.py
